css/styles-custom.css
/* ... */
.subheader-comunity__text {
  font-weight: bold;
}
.btn-ir-ahora {
  margin-left: auto;
  margin-right: auto;
  margin-top: 5em;
  width: 12em;
  transition: ease-in-out 0.3s;
}
.btn-ir-ahora:hover {
  transform: scale(1.02);
}
.subheader-comunity__img {
  width: 7em;
  transition: ease-in-out 0.2s;
}
/* -----Fin Subheader o Seccion de Instagram----- */

/* -----Inicio Seccion de Telegram----- */
.plane-desktop{
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
}
.section-telegram__container {
  position: relative;
  background-color: var(--azul-claro);
  background-position: center bottom;
  background-size: contain;
  background-repeat: no-repeat;
  padding-top: 10em;
  padding-bottom: 16em;
  padding-left: 9em;
}
.section-telegram__container h3 {
  font-weight: bold;
}
.section-telegram__container span {
  font-weight: bold;
  display: block;
}
.section-telegram__list {
  padding-left: 1rem;
}
.btn-ser-parte {
  margin-top: 4em;
  transition: ease-in-out 0.3s;
}
.btn-ser-parte:hover {
  transform: scale(1.02);
}
.gif-avioncito {
  display: flex;
}
/* -----Fin Seccion de Telegram----- */

/* -----Pagina NOSOTROS----- */
/* -----Inicio Header----- */
.header-container__nosotros {
  padding: 8rem 1.5rem 1.5rem 1.5rem;
  background: var(--azul-claro);
}
.header-title__nosotros {
  padding: 5rem 4rem 2rem 5rem;
  color: var(--azul-oscuro);
  font-weight: bold;
}
.header-text__nosotros {
  font-size: 0.95rem;
  font-weight: normal;
  max-width: 60%;
  padding: 0rem 4rem 5rem 5rem;
  margin-bottom: 0;
}
/* -----Fin Header----- */

/* -----Inicio Equipo----- */
.section-team__container {
  background-color: var(--azul-medio);
  padding-top: 10rem;
  padding-bottom: 8rem;
}
.section-team__direccion-title {
  color: var(--amarillo);
  font-weight: bold;
  margin-bottom: 3em;
}
.card-person {
  color: var(--blanco);
  transition: ease-in-out 0.5s;
}
.card-person__title {
  font-size: 1.3rem;
  font-weight: bold;
  margin-top: 1rem;
  margin-bottom: 0rem;
}
.card-person__img {
  max-width: 85%;
  filter: drop-shadow(5px 5px 6px rgba(0, 0, 0, 0.25));
  transition: ease-in-out 0.5s;
}

/* -----Fin Equipo----- */

/* -----Inicio Slider Otros de equipo----- */
.section-other-team__container {
  background-color: var(--azul-medio);
  padding-bottom: 7rem;
}
.card-person__img-other {
  max-width: 75%;
}
.other-team__title {
  color: var(--amarillo);
  font-weight: bold;
  padding-bottom: 1em;
  padding-left: 0.6rem;
}
.card-person p {
  font-size: 1rem;
}

.swiper {
  width: 100%;
  height: 100%;
}

.swiper-slide {
  text-align: center;
  font-size: 18px;
  background: var(--azul-medio);
  /* Center slide text vertically */
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
}
.swiper-slide img {
  /* display: block; */
  /* width: 100%; */
  height: 100%;
  object-fit: cover;
}
.swiper-button-next::after,
.swiper-button-prev::after {
  color: var(--amarillo);
}
/* -----Fin Slider Otros de equipo----- */

/* -----Inicio Nuestros valores----- */
.nuestros-valores__title {
  font-weight: bold;
  color: var(--azul-oscuro);
  padding: 5rem 4rem 2rem 5rem;
}
.nuestros-valores__text-mobile {
  display: none;
}
.nuestros-valores__image {
  padding-bottom: 7rem;
}
/* -----Fin Nuestros valores----- */

/* -----Inicio Trabaja con nosotros----- */
.section-trabaja-nosotros__container {
  background-color: var(--azul-claro);
}
.trabaja-nosotros__row {
  padding: 7em;
}
.trabaja-nosotros__image {
  filter: drop-shadow(4px 4px 8px rgba(0, 0, 0, 0.25));
}
.trabaja-nosotros__title {
  font-weight: bold;
  color: var(--azul-oscuro);
}
.btn-cargar-cv-nosotros {
  padding: 0.3rem 3rem !important;
  transition: ease-in-out 0.2s;
}
.btn-cargar-cv-nosotros:hover {
  transform: scale(1.05);
}
/* -----Fin Trabaja con nosotros----- */

/* -----Inicio Modal CARGAR MI CV----- */
.modal-content__trabaja-nosotros {
  background-color: var(--blanco);
  border-radius: 10px;
}
.modal-title__trabaja-nosotros {
  color: var(--azul-oscuro);
  font-weight: bold;
  font-size: 1.8rem;
}
.modal-body__trabaja-nosotros {
  display: flex;
  justify-content: center;
  width: 100%;
}
.modal-body__form {
  width: 75%;
}
.input__name,
.input__tel,
.input__email,
.input__empresa,
.input__email-empresa,
.textarea__mensaje {
  padding: 0.8em 1em;
  border: 1px solid rgba(0, 0, 0, 0.25);
  border-radius: 10px;
}
.input__name,
.input__tel,
.input__empresa,
.input__email-empresa {
  width: 48%;
}
.textarea__mensaje {
  resize: none;
}
.label-cargar-cv {
  background-color: transparent;
  border: 2px solid var(--amarillo);
  border-radius: 1.2em;
  padding: 0.2rem 2rem;
  font-weight: bold;
  text-transform: uppercase;
  cursor: pointer;
}
.label-cargar-cv:hover {
  transform: scale(0.98);
}
.span-cargar-cv {
  display: block;
  color: #ff0000;
  font-size: 0.9rem;
  font-weight: bold;
}
.modal-footer__trabaja-nosotros h3 {
  color: var(--azul-oscuro);
  font-weight: bold;
}
.modal-footer__trabaja-nosotros p {
  font-size: 1.3rem;
  color: var(--negro);
  font-weight: bold;
}
.swal2-title {
  color: var(--azul-oscuro) !important;
}
/* -----Fin Modal CARGAR MI CV----- */

/* -----Pagina PARTICULARES Y GRUPOS----- */
/* -----Inicio Header----- */
.header-image__particulares {
  display: flex;
  align-items: center;
  justify-content: center;
  background: -webkit-image-set(
    url("../assets/images/portada-individuos-grupos.webp") 1x,
    url("../assets/images/portada-individuos-grupos-mobile.webp") 3x
  );
  background-position: top center;
  background-size: cover;
  background-repeat: no-repeat;
  height: 70vh;
  position: relative;
  top: 5rem;
}
.padding-flecha{
  padding-top: 9rem;
}
/* ... */

